@@ -1,59 +1,152 @@
 package com.fortune.config;
 
+import com.fortune.security.JwtAuthenticationEntryPoint;
+import com.fortune.security.JwtAuthenticationFilter;
+import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
+import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.userdetails.UserDetailsService;
+import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
-/*
- * 보안 설정
- * 보안 필터 체인 설정
- * CORS 설정
+/**
+ * 🔒 Spring Security 설정 클래스
+ * 
+ * <p>JWT 기반 인증 및 보안 설정을 구성합니다.</p>
  */
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(prePostEnabled = true)
+@RequiredArgsConstructor
 public class SecurityConfig {
 
-    /*
+    private final UserDetailsService userDetailsService;
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    private final JwtAuthenticationEntryPoint jwtAuthenticationEntryPoint;
+
+    /**
      * 보안 필터 체인 설정
-     * CORS 설정
-     * CSRF 설정
-     * 인증 요청 설정
      */
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                .cors(cors -> cors.configurationSource(corsConfigurationSource())) // CORS 설정
-                .csrf(csrf -> csrf.disable())                                    // CSRF 설정
-                .authorizeHttpRequests(authz -> authz
-                        .requestMatchers("/api/fortune/**").permitAll()           // 허용 URL
-                        .requestMatchers("/actuator/health").permitAll()
-                        .anyRequest().authenticated()                            // 인증 요청 설정
-                );
+            // CSRF 비활성화 (JWT 사용 시)
+            .csrf(AbstractHttpConfigurer::disable)
+            
+            // CORS 설정
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            
+            // 세션 비활성화 (JWT 사용 시)
+            .sessionManagement(session -> 
+                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+            
+            // 인증이 필요한 URL 패턴 설정
+            .authorizeHttpRequests(authz -> authz
+                // 공개 접근 허용 경로
+                .requestMatchers(
+                    "/api/auth/**",          // 인증 관련 API
+                    "/api/public/**",        // 공개 API
+                    "/health",               // 헬스 체크
+                    "/actuator/**",          // Actuator 엔드포인트
+                    "/swagger-ui/**",        // Swagger UI
+                    "/v3/api-docs/**",       // OpenAPI 문서
+                    "/swagger-resources/**", // Swagger 리소스
+                    "/webjars/**"           // WebJars
+                ).permitAll()
+                
+                // 관리자 권한이 필요한 경로
+                .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                
+                // 사용자 권한이 필요한 경로
+                .requestMatchers("/api/user/**").hasAnyRole("USER", "ADMIN")
+                
+                // 나머지 모든 요청은 인증 필요
+                .anyRequest().authenticated()
+            )
+            
+            // JWT 인증 진입점 설정
+            .exceptionHandling(ex -> 
+                ex.authenticationEntryPoint(jwtAuthenticationEntryPoint))
+            
+            // 인증 제공자 설정
+            .authenticationProvider(authenticationProvider())
+            
+            // JWT 필터 추가
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
-    /*
+    /**
+     * 패스워드 인코더 빈 등록
+     */
+    @Bean
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+    /**
+     * 인증 매니저 빈 등록
+     */
+    @Bean
+    public AuthenticationManager authenticationManager(
+            AuthenticationConfiguration authenticationConfiguration) throws Exception {
+        return authenticationConfiguration.getAuthenticationManager();
+    }
+
+    /**
+     * 인증 제공자 설정
+     */
+    @Bean
+    public DaoAuthenticationProvider authenticationProvider() {
+        DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
+        authProvider.setUserDetailsService(userDetailsService);
+        authProvider.setPasswordEncoder(passwordEncoder());
+        return authProvider;
+    }
+
+    /**
      * CORS 설정
-     * CORS 설정 소스 반환
      */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Arrays.asList("*"));            // 모든 출처 허용
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));                    // 모든 헤더 허용
+        
+        // 허용할 오리진 설정
+        configuration.setAllowedOriginPatterns(List.of("*"));
+        // 또는 특정 도메인만 허용하려면:
+        // configuration.setAllowedOrigins(List.of("http://localhost:3000", "https://yourdomain.com"));
+        
+        // 허용할 HTTP 메서드
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+        
+        // 허용할 헤더
+        configuration.setAllowedHeaders(List.of("*"));
+        
+        // 인증 정보 포함 허용
         configuration.setAllowCredentials(true);
+        
+        // 최대 캐시 시간 (초)
+        configuration.setMaxAge(3600L);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource(); // URL 기반 CORS 설정 소스 생성
-        source.registerCorsConfiguration("/api/**", configuration);                    // CORS 설정 등록
-        return source;                                                                // CORS 설정 소스 반환
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", configuration);
+        
+        return source;
     }
 }
